--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,7 @@
   font-size: 3rem;
   font-weight: bold;
   padding: 20px;
+  margin-left: -20px;
   letter-spacing: 1.3px;
   outline: none;
   margin-top: 20px;
